# fastatools

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
ci/: before_deploy.sh  script.sh
resources/: subset_ids.txt  test.accessions  test.fasta  test.index  test.lengths  test_index.json  test_short_desc.accessions  test_short_desc.fasta  test_short_desc.index  test_subset_ids
src/: main.rs  subcommands.rs
tests/: cli.rs
