[package]
name = "fastatools"
version = "0.1.0"
authors = ["Nick Machnik <nick.machnik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.3"
fasta = "0.1"
clap = "2.33"
chrono = "0.4"
log = "0.4"
env_logger = "0.7"