[package]
name = "fastatools"
version = "0.1.1"
authors = ["Nick Machnik <nick.machnik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fasta = "0.1"
rayon = "1.3"
clap = "2.33"
chrono = "0.4"
log = "0.4"
env_logger = "0.7"

[dev-dependencies]
assert_cmd = "1"
predicates = "1"